# Generix-doc-gen

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: doc-generator.md  doc-reviewer.md
.claude/skills/generating-documentation/: SKILL.md
.claude/skills/reviewing-documentation/: SKILL.md
exercises/: exercise-1-create-skill (FR).md  exercise-1-create-skill.md  exercise-1-template-SKILL (FR).md  exercise-1-template-SKILL.md  exercise-2-create-subagents (FR).md  exercise-2-create-subagents.md  exercise-3-trigger-agents (FR).md  exercise-3-trigger-agents.md
input text/: cat.py
slides/: workshop-slides (FR).md  workshop-slides.md
src/docgen/: display.py  llm.py  main.py  models.py  storage.py
src/docgen/commands/: __init__.py  check.py  generate.py  list.py  update.py
tests/: __init__.py  conftest.py  test_check.py  test_generate.py  test_list.py  test_update.py
