[project]
name = "docgen-cli"
version = "0.1.0"
description = "An AI-powered documentation generator for source code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.2.0",
    "typer>=0.21.0",
    "openai>=1.82.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
docgen = "docgen.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docgen"]
